AWS/Terraform/110225/data-types.tf
# resource "aws_vpc" "sample" {
#     cidr_block = "sample"
#     enable_dns_hostnames = true
# }

# lists = [value1, value2, value3] = [0,1,2]
